--- a/youtube_comment.ipynb
+++ b/youtube_comment.ipynb
@@ -787,7 +787,7 @@
     "    except:\n",
     "        adjective = {'형용사 없음'}\n",
     "        \n",
-    "    union = nouns.symmetric_difference(morphs)\n",
+    "    union = nouns.symmetric_difference(adjective)\n",
     "    return union"
    ]
   },
