유튜브 댓글 크롤링 데모

--- a/youtube_comment.ipynb
+++ b/youtube_comment.ipynb
@@ -787,7 +787,7 @@
     "    except:\n",
     "        adjective = {'형용사 없음'}\n",
     "        \n",
-    "    union = nouns.symmetric_difference(adjective)\n",
+    "    union = nouns.symmetric_difference(adjective)\n # set.symmetric_difference: 두 set 집합 간의 차집합(합집합 - 교집합)",
     "    return union"
    ]
   },
